Working on mobile menu toggle

--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@ function scrollFunction() {
   }
 }
         </script>
+
+<script src="https://kit.fontawesome.com/e2ee4a69e1.js" crossorigin="anonymous"></script>
     </head>
     <body>
         
         <header class="main-header">
             <nav class="navbar navbar-large fixed-top navbar-fixed-top mobile-nav" id="mainNav">
                 <img src="https://blackrockdigital.github.io/startbootstrap-agency/assets/img/navbar-logo.svg" class="logo-full" id="logo" />
-                <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">MENU</button>
+                <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">MENU <i class="fas fa-bars"></i></button>
                 <ul class="navbar-nav text-uppercase ml-auto mobile-menu">
                     <li class="header-menu-item"><a class="nav-link" href="#">Services</a></li>
                     <li class="header-menu-item"><a class="nav-link" href="#">Portfolio</a></li>
